--- a/client/home.css
+++ b/client/home.css
@@ -1,3 +1,9 @@
+div.container{
+    text-align: -webkit-center;
+    text-align: center;
+    padding-top: 2%;
+}
+
 div#dropDiv {
     border: 5px dashed #CCC;
     width:100%;
